WebKitTestRunner should enable ResourceLoadStatistics also for non-Cocoa ports https://bugs.webkit.org/show_bug.cgi?id=209410

Reviewed by Youenn Fablet.

Source/WebKit:

NetworkSession's member variables for ResourceLoadStatistics were
initialized only for Cocoa port. They also should be initialized
for non-Cocoa ports.

* NetworkProcess/NetworkSession.cpp:
(WebKit::NetworkSession::NetworkSession): Added member initializers for ResourceLoadStatistics.
* NetworkProcess/NetworkSession.h: Have m_resourceLoadStatisticsDirectory only if ENABLE(RESOURCE_LOAD_STATISTICS).
* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::NetworkSessionCocoa): Removed the code to initialize member variables for ResourceLoadStatistics.

Tools:

Cocoa WebKitTestRunner always enables ResourceLoadStatistics.
Other ports should do so.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::platformAdjustContext): Enable ResourceLoadStatistics
by using WKWebsiteDataStoreSetResourceLoadStatisticsEnabled.

Canonical link: https://commits.webkit.org/222550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259076 268f45cc-cd09-0410-ab3c-d52691b4dbfc